# octane

./: .env.example  .gitignore  LICENSE  README.md  _test_pw_fetch.py  comparison.md  comparison2.md  demo.cast  demo.sh  docker-compose.yml  nvda_brief.json  pyproject.toml  setup.sh
SessionHistory/: Octane_Commands.txt  Session_1.json  Session_10.json  Session_11.json  Session_12.json  Session_13.json  Session_14.json  Session_15.json  Session_16.json  Session_17.json  Session_18A.json  Session_18B.json  Session_18C.json  Session_19.json  Session_2.json  Session_20.json  Session_20_Rahul_TestList.txt  Session_21.json  Session_22.json  Session_23.json  Session_24.json  Session_25.json  Session_25B.json  Session_26.json  Session_27.json  Session_28.json  Session_29.json  Session_3.json  Session_30.json  Session_31.json  Session_34.json  Session_35.json  Session_36.json  Session_37.json  Session_39.json  Session_4.json  Session_5.json  Session_6.json  Session_7.json  Session_8.json  (+1 more)
context/: BODEGA_MLX_DOCS.md  BODEGA_MLX_MULTI_MODAL_MULTI_MODEL_INFERENCE.md  BUG_LOGS.md  EYESO_Programming_Language.md  OCTANE_4_PHASE_PLAN_v2.md  OCTANE_AI_IDE_v2.md  OCTANE_APPLICATIONS_EVERYDAY_USE.md  OCTANE_CLI.md  OCTANE_CLI_CheatSheet.md  OCTANE_MANIFESTO.md  OCTANE_PLAN_v3.md  OCTANE_SESSION_FinalSession.md  OCTANE_Session_Recap_33_40_plan.md  OCTANE_Session_Recap_Until_27.md  OCTANE_YOUTUBE_PDF_ARXIV_EXTRACTION_PIPLEINE.md  Octane_Session_28-33.md  USER_QUERY_OCTANE_FLOW.md
docs/: ARCHITECTURE.md  BODEGA.md  CLI_CHEATSHEET.md  EYESO.md  OPEN_SOURCE.md  QUICKSTART.md  ROADMAP.md  (+5 more)
(+439 files in other folders)
